Fix modal close button position on mobile

--- a/src/sass/elements/_modal.sass
+++ b/src/sass/elements/_modal.sass
@@ -165,6 +165,7 @@ $formPaddings: 10px
       display: flex
 
     &__close
+      padding: 11px
       position: absolute
       top: 0
       right: 0
